crates/iota/tests/snapshots/ptb_files_tests__basic_assign.ptb.snap
---
source: crates/iota/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === PREVIEW === 
╭────────────────────────────╮
│ PTB Preview                │
├─────────────┬──────────────┤
│ command     │ values       │
├─────────────┼──────────────┤
│ assign      │ x 10         │
│ assign      │ y 11         │
│ split-coins │ gas [x, y]   │
│ assign      │ coins        │
│ assign      │ c0 coins.0   │
│ assign      │ c1 coins.1   │
│ merge-coins │ gas [c0, c1] │
╰─────────────┴──────────────╯
 === BUILT PTB === 
Input 0: Pure([10, 0, 0, 0, 0, 0, 0, 0])
Input 1: Pure([11, 0, 0, 0, 0, 0, 0, 0])
Command 0: Command: Split Coins
├── Coin: Gas
└── Amounts
    ├── 0: Input(0)
    └── 1: Input(1)
Command 1: Command: Merge Coins
├── Coin: Gas
└── Coins To Merge
    ├── 0: NestedResult(0, 0)
    └── 1: NestedResult(0, 1)
