crates/iota/tests/snapshots/ptb_files_tests__gas_outside_range.ptb.snap
---
source: crates/iota/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === ERRORS AFTER PARSING INPUT COMMANDS === 
  × Error when processing PTB
   ╭────
 1 │ --gas-budget 0xFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF 
   ·              ─────────────────────────────────────┬────────────────────────────────────
   ·                                                   ╰── number too large to fit in target type
   ╰────

  × Error when processing PTB
   ╭────
 1 │ --gas-budget 0xFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF 
   ·                                                                                        ▲
   ·                                                                                        ╰── Gas budget not set.
   ╰────
  help: Use --gas-budget <u64> to set a gas budget

