crates/iota/tests/snapshots/ptb_files_tests__gas_price.ptb.snap
---
source: crates/iota/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === PREVIEW === 
╭────────────────────╮
│ PTB Preview        │
├───────────┬────────┤
│ command   │ values │
├───────────┼────────┤
│ gas-price │ 2000   │
╰───────────┴────────╯
 === BUILT PTB ===
