crates/iota/tests/snapshots/ptb_files_tests__gas_smashing.ptb.snap
---
source: crates/iota/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === PREVIEW === 
╭───────────────────────────────────────────────────────────────────────────────╮
│ PTB Preview                                                                   │
├──────────┬────────────────────────────────────────────────────────────────────┤
│ command  │ values                                                             │
├──────────┼────────────────────────────────────────────────────────────────────┤
│ gas-coin │ 0x0000000000000000000000000000000000000000000000000000000000000001 │
│          │ 0x0000000000000000000000000000000000000000000000000000000000000002 │
│          │ 0x0000000000000000000000000000000000000000000000000000000000000003 │
╰──────────┴────────────────────────────────────────────────────────────────────╯
 === BUILT PTB ===
