crates/iota/tests/snapshots/ptb_files_tests__gas_sponsor.ptb.snap
---
source: crates/iota/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === PREVIEW === 
╭──────────────────────────────────────────────────────────────────────────────────╮
│ PTB Preview                                                                      │
├─────────────┬────────────────────────────────────────────────────────────────────┤
│ command     │ values                                                             │
├─────────────┼────────────────────────────────────────────────────────────────────┤
│ gas-sponsor │ 0x0000000000000000000000000000000000000000000000000000000000000042 │
╰─────────────┴────────────────────────────────────────────────────────────────────╯
 === BUILT PTB ===
